Bedrock model is now configurable

--- a/cdk/bin/config.json
+++ b/cdk/bin/config.json
@@ -2,6 +2,7 @@
   "prefix": "aaa123",
   "aws_region": "us-west-2",
   "bedrock_region": "us-west-2",
-  "bucket_name": "summarization-test"
+  "bucket_name": "summarization-test",
+  "bedrock_model_id": "anthropic.claude-3-sonnet-20240229-v1:0"
 }
 
