--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "microphone-stream": "6.0.1",
     "process": "0.11.10",
     "react": "18.3.1",
+    "react-audio-visualize": "^1.1.3",
     "react-dom": "18.3.1",
     "tiny-glob": "0.2.9",
     "uuid": "9.0.1",
