--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "content_scripts": [
     {
-      "matches": ["https://docs.amplify.aws/"],
+      "matches": ["https://docs.amplify.aws/tmp"],
       "run_at": "document_end",
       "js": [ "service-worker.js" ],
       "css": [],
