Minor fixes on package name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "AWS transcribe, translate and summarize",
+  "name": "Transcribe, translate and summarize live streams (powered by AWS)",
   "version": "0.0.1",
   "content_scripts": [
     {
