--- a/cdk/package.json
+++ b/cdk/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudformation": "^3.637.0",
-    "aws-cdk-lib": "2.135.0",
+    "aws-cdk-lib": "^2.135.0",
     "cdk-nag": "^2.28.129",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
